--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hcl-rs = "0.18.2"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-serde_yaml_ng = "0.10.0"
+tide = "0.16.0"
 toml = "0.8.19"
+hcl-rs = "0.18.2"
+tracing = "0.1.40"
+macros-rs = "1.4.1"
+owo-colors = "4.1.0"
+serde_json = "1.0.128"
+tide-tracing = "0.1.1"
+serde_yaml_ng = "0.10.0"
+
+serde = { version = "1.0.210", features = ["derive"] }
+async-std = { version = "1.13.0", features = ["attributes"] }
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
